Fix arch. and add includes to library.properties

--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,5 @@ sentence=ESP32 Polyfill for analogWrite functions
 paragraph=Provides an analogWrite polyfill for ESP32 using the LEDC functions
 category=Signal Input/Output
 url=https://github.com/ERROPiX/ESP32_AnalogWrite
-architectures=*
+architectures=esp32
+includes=analogWrite.h
