updated library metadata

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=ESP32 AnalogWrite
-version=0.1
-author=ERROPiX
-maintainer=Abdelouahed ERROUAGUY
+version=0.2
+author=Abdelouahed ERROUAGUY <errouaguy.pro@gmail.com>
+maintainer=Abdelouahed ERROUAGUY <errouaguy.pro@gmail.com>
 sentence=ESP32 Polyfill for analogWrite functions
 paragraph=Provides an analogWrite polyfill for ESP32 using the LEDC functions
 category=Signal Input/Output
